fixed feign client and public pem loading issue